[project]
name = "vacate-server"
version = "0.1.0"
description = "Lightweight vacation-day planning server."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.14",
    "greenlet>=3.2.3",
    "holidays>=0.75",
    "pytest-asyncio>=1.0.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
